--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&family=Jersey+25&display=swap"
     rel="stylesheet" />
-  <title>MathPath</title>
+  <title>Math-Path 10</title>
 </head>
 
 <body>
